<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ramapo.csnyder.Risk.FirstPlayer" >

    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/dice_display"
        android:orientation="horizontal">
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_one"
            android:visibility="gone"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_one_string"
                android:text="@string/player_one"
                android:layout_gravity="center"
                android:textSize="20sp"/>
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:id="@+id/player_one_die"
                />
            
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:visibility="gone"
            android:id="@+id/player_two"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_two_string"
                android:text="@string/player_two"
                android:layout_gravity="center"
                android:textSize="20sp"/>
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:id="@+id/player_two_die"
                />
            
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:visibility="gone"
            android:id="@+id/player_three"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_three_string"
                android:text="@string/player_three"
                android:layout_gravity="center"
                android:textSize="20sp"/>
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:id="@+id/player_three_die"
                />
            
        </LinearLayout>
        
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:visibility="gone"
            android:id="@+id/player_four"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_four_string"
                android:text="@string/player_four"
                android:layout_gravity="center"
                android:textSize="20sp"/>
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:id="@+id/player_four_die"
                />
            
        </LinearLayout>
        
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:visibility="gone"
            android:id="@+id/player_five"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_five_string"
                android:text="@string/player_five"
                android:layout_gravity="center"
                android:textSize="20sp"/>
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:id="@+id/player_five_die"
                />
            
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:visibility="gone"
            android:id="@+id/player_six"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/player_six_string"
                android:text="@string/player_six"
                android:layout_gravity="center"
                android:textSize="20sp"/>
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:id="@+id/player_six_die"
                />
            
        </LinearLayout>
        
        
    </LinearLayout>
    
    
    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/result_display"
        android:layout_below="@id/dice_display"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginTop="30dp"/>
    
        
    <Button 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/roll_die_button"
        android:onClick="rollDice"
        android:layout_marginTop="30dp"
        android:layout_below="@id/result_display" 
        android:layout_centerHorizontal="true"
        android:text="@string/roll_dice"
        android:textSize="30sp"
       >
        
    </Button>"
    

</RelativeLayout>
